infra/authentik/templates/authentik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: authentik
spec:
  routes:
    - match: Host(`authentik.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
    - match: Host(`authentik.k8s.rooty.dev`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: rooty-dev-wildcard
